fixed overflow

--- a/app.css
+++ b/app.css
@@ -6,6 +6,7 @@
   height: 300px;
   border: 0.5px solid black;
   margin-top: 2px;
+  overflow-x: auto;
 }
 
 #pre-tag {
